--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "react-library-boilerplate",
+  "name": "@gw2armory/resource-utils",
   "version": "0.0.0",
-  "description": "Project description.",
+  "description": "Creates maps of gw2 resources with associated helper utilities.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/madou/react-library-boilerplate.git"
+    "url": "git+https://github.com/madou/@gw2a/resource-utils.git"
   },
   "author": "Michael Dougall",
   "license": "MIT",
@@ -12,7 +12,6 @@
   "main": "index.js",
   "jsnext:main": "index.es6.js",
   "scripts": {
-    "start": "npm run storybook",
     "test": "BABEL_ENV=test npm run lint && npm run flow && npm run cover",
     "lint": "eslint src test tools",
     "unit": "BABEL_ENV=test mocha \"src/**/*.spec.js\"",
@@ -25,16 +24,16 @@
     "preversion": "npm test",
     "version": "version-changelog CHANGELOG.md && changelog-verify CHANGELOG.md && git add CHANGELOG.md",
     "postversion": "git push && git push --tags",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "setupTest": "BABEL_ENV=test babel-node test/createTestMap >> test/itemsMap.json"
   },
   "dependencies": {
-    "react": "^15.5.4"
+    "axios": "^0.16.2",
+    "axios-retry": "^1.2.0",
+    "promise-throttle": "^0.3.1"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
     "app-module-path": "^2.2.0",
-    "babel-cli": "^6.8.0",
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.8.0",
     "babel-eslint": "^6.0.4",
     "babel-plugin-istanbul": "^4.1.1",
@@ -47,37 +46,30 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "babel-preset-es2016": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.8.0",
     "babel-runtime": "^6.6.1",
     "chai": "^3.5.0",
     "chai-as-promised": "^6.0.0",
-    "chai-enzyme": "^0.6.1",
     "changelog-verify": "^1.0.4",
     "codecov": "^2.1.0",
     "coveralls": "^2.11.9",
     "del": "^2.2.0",
-    "enzyme": "^2.8.0",
     "eslint": "^3.14.0",
     "eslint-config-airbnb": "^8.0.0",
     "eslint-plugin-flowtype": "^2.30.4",
     "eslint-plugin-import": "^1.6.1",
     "eslint-plugin-jsx-a11y": "^1.0.4",
     "eslint-plugin-mocha": "^4.9.0",
-    "eslint-plugin-react": "^5.0.1",
     "flow-bin": "^0.43.1",
     "flow-copy-source": "^1.1.0",
     "istanbul": "^1.0.0-alpha.2",
     "jsdom": "^9.1.0",
     "jsdom-global": "^2.1.1",
-    "less-loader": "^4.0.3",
     "lodash": "^4.17.4",
     "mocha": "^2.4.5",
     "nyc": "^10.2.0",
     "proxyquire": "^1.7.11",
-    "react-addons-test-utils": "^15.5.1",
-    "react-dom": "^15.5.4",
     "rollup": "^0.26.2",
     "rollup-plugin-babel": "^2.4.0",
     "rollup-plugin-flow": "^1.1.1",
@@ -95,8 +87,7 @@
         }
       ],
       "babel-preset-es2016",
-      "babel-preset-stage-0",
-      "babel-preset-react"
+      "babel-preset-stage-0"
     ],
     "plugins": [
       "transform-runtime",
@@ -124,9 +115,9 @@
     }
   },
   "bugs": {
-    "url": "https://github.com/madou/react-library-boilerplate/issues"
+    "url": "https://github.com/madou/@gw2armory/resource-utils/issues"
   },
-  "homepage": "https://github.com/madou/react-library-boilerplate#readme",
+  "homepage": "https://github.com/madou/@gw2armory/resource-utils#readme",
   "directories": {
     "test": "test"
   }
