--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@gw2armory/resource-utils",
+  "name": "gw2-resource-utils",
   "version": "0.1.1",
   "description": "Creates maps of gw2 resources with associated helper utilities.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/madou/gw2armory-resource-utils.git"
+    "url": "git+https://github.com/madou/gw2-resource-utils.git"
   },
   "publishConfig": {
     "access": "public"
@@ -118,9 +118,9 @@
     }
   },
   "bugs": {
-    "url": "https://github.com/madou/gw2armory-resource-utils/issues"
+    "url": "https://github.com/madou/gw2-resource-utils/issues"
   },
-  "homepage": "https://github.com/madou/gw2armory-resource-utils#readme",
+  "homepage": "https://github.com/madou/gw2-resource-utils#readme",
   "directories": {
     "test": "test"
   }
